--- a/src/pages/disciplineTable/discipline-table.html
+++ b/src/pages/disciplineTable/discipline-table.html
@@ -62,7 +62,7 @@
             <tr>
                 <td>MAT101</td>
                 <td>Matemática Básica</td>
-                <td>Carlos Silva</td>
+                <td>Fernando Costa</td>
                 <td>8.5</td>
                 <td>2</td>
             </tr>
